vm/src/snapshots/vm__test__stack_snapshot_tests@structs__basic.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/basic.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 10,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 20,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 30,
  ),
]
