vm/src/snapshots/vm__test__stack_snapshot_tests@structs__field_access_on_call.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/field_access_on_call.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 42,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 99,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 50,
  ),
]
