vm/src/snapshots/vm__test__stack_snapshot_tests@structs__field_assignment.tapir.snap
---
source: vm/src/lib.rs
expression: stack_at_waits
input_file: vm/src/snapshot_tests/stack/structs/field_assignment.tapir
---
[
  ([
    [
      -1,
      1,
      1,
      50331652,
      1,
    ],
  ], PropObj(
    int_prop: 1,
  )),
  ([
    [
      -1,
      100,
      100,
      50331660,
      100,
    ],
  ], PropObj(
    int_prop: 100,
  )),
  ([
    [
      -1,
      200,
      200,
      50331668,
      200,
    ],
  ], PropObj(
    int_prop: 200,
  )),
  ([], PropObj(
    int_prop: 300,
  )),
]
