vm/src/snapshots/vm__test__stack_snapshot_tests@structs__function_param.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/function_param.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 18,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 7,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 300,
  ),
]
