vm/src/snapshots/vm__test__stack_snapshot_tests@structs__function_return.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/function_return.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 3,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 4,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 6,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 8,
  ),
]
