vm/src/snapshots/vm__test__stack_snapshot_tests@structs__in_loop.tapir.snap
---
source: vm/src/lib.rs
expression: stack_at_waits
input_file: vm/src/snapshot_tests/stack/structs/in_loop.tapir
---
[
  ([
    [
      -1,
      0,
      0,
      0,
      1,
      3,
      3,
      1,
      2,
      2,
      0,
      2,
      1,
      0,
      0,
      0,
      0,
      3,
      0,
      318767139,
      3,
    ],
  ], PropObj(
    int_prop: 3,
  )),
  ([
    [
      -1,
      1,
      1,
      1,
      1,
      6,
      6,
      2,
      4,
      4,
      2,
      2,
      2,
      1,
      0,
      0,
      0,
      3,
      0,
      318767139,
      6,
    ],
  ], PropObj(
    int_prop: 6,
  )),
  ([
    [
      -1,
      2,
      2,
      2,
      1,
      9,
      9,
      3,
      6,
      6,
      4,
      2,
      3,
      2,
      0,
      0,
      0,
      3,
      0,
      318767139,
      9,
    ],
  ], PropObj(
    int_prop: 9,
  )),
  ([
    [
      -1,
      3,
      3,
      3,
      1,
      9,
      9,
      3,
      6,
      6,
      6,
      2,
      3,
      3,
      0,
      3,
      1,
      3,
      0,
      318767118,
      3,
    ],
  ], PropObj(
    int_prop: 3,
  )),
  ([], PropObj(
    int_prop: 6,
  )),
]
