vm/src/snapshots/vm__test__stack_snapshot_tests@structs__reassign.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/reassign.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 1,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 100,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 200,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 999,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 888,
  ),
]
