vm/src/snapshots/vm__test__stack_snapshot_tests@structs__struct_copy.tapir.snap
---
source: vm/src/lib.rs
expression: results
input_file: vm/src/snapshot_tests/stack/structs/struct_copy.tapir
---
[
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 10,
  ),
  FrameResult(
    active_states: 1,
    int_prop: 5,
  ),
  FrameResult(
    active_states: 0,
    int_prop: 999,
  ),
]
